<resources>
    <string name="app_name">Tracker Water</string>
    <string name="inights">Inights</string>
    <string name="history">History</string>
    <string name="today">Today</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drink">Drink</string>
    <string name="hydrated_text">
        Drink <font color="#0247C8">200-300ml of water</font> each time to stay well-hydrated
    </string>
    <string name="records">Records</string>
    <string name="choose_your_age">Choose your age</string>
    <string name="age_text2">The daily water intake needs of people of different ages vary</string>
    <string name="next">Next</string>
    <string name="home">Home</string>
    <string name="how_weigh">How much do you weigh?</string>
    <string name="exercise_text">How much exercise do you do each week</string>
    <string name="RarelyExercise">Rarely exercise</string>
    <string name="SometimesExercise">Sometimes exercise</string>
    <string name="RegularlyExercise">Regularly Exercise</string>
    <string name="OftenExercise">Often exercise</string>
    <string name="Hot">Hot</string>
    <string name="Temperate">temperate</string>
    <string name="cold">Cold</string>
    <string name="wake_up">When do you usually wake up?</string>
    <string name="meal">What\'s your usual meal time?</string>
    <string name="dont_eat_lunch">I don\'t eat lunch</string>
    <string name="dont_eat_breakfast">I don\'t eat breakfast</string>
    <string name="dont_eat_dinner">I don\'t eat dinner</string>
    <string name="wakeup_drink">Drinking water 1 hour before sleep will keep you hydrated during your sweet dream</string>
    <string name="synData">Synchronize Data ></string>
    <string name="total_dirk">Total Drinking</string>
    <string name="reminder">Reminders</string>
    <string name="total_achieved">Total Achieved</string>
    <string name="version">Version 1.3.3 A</string>
    <string name="daily_goal">Daily Goal</string>
    <string name="sound_vibration"><![CDATA[Sounds & Vibration]]></string>
    <string name="units">Units</string>
    <string name="genders_weight"><![CDATA[Gender & Weight]]></string>
    <string name="language_options">Language Options</string>
    <string name="english">English</string>
    <string name="first_dayOweek">First Day Of Week</string>
    <string name="Day_StartAt">A Day Starts At</string>
    <string name="time_format">Time Format</string>
    <string name="RemoveAds">Remove ads</string>
    <string name="feed_back">Feedback</string>
    <string name="rate_us">Rate Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="profile">Profile</string>
    <string name="day">day</string>
    <string name="week">Week</string>
    <string name="goal">Goal</string>
    <string name="total">Total</string>
    <string name="oz">Oz</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="Day_StartAt0">A day starts at 00:00</string>
    <string name="aday_start_at2">Records before 00:00 willbe included in the count for the previous day.</string>
    <string name="water_drop1">Water drop 1</string>
    <string name="water_drop2">Water drop 2</string>
    <string name="water_flowing1">Water flowing 1</string>
    <string name="water_flowing2">Water flowing 2</string>
    <string name="water_flowing3">Water flowing 3</string>
    <string name="sound_effect">Sound effect</string>
    <string name="vibration">Vibration</string>
    <string name="done">Done</string>
    <string name="month">Month</string>
    <string name="we_just_need_to_ask_a_few">We just need to ask a few questions to customize your daily goal and schedule.</string>
    <string name="welcome_to_your_smart_water_tracker">Welcome to your smart water tracker</string>
    <string name="drink_water_live_better">Drink water, live better.</string>
    <string name="your_gender_helps_us_suggest">Your gender helps us suggest a more accurate daily water intake goal.</string>
    <string name="what_s_your_gender">What’s your gender?</string>
    <string name="other">Other</string>
    <string name="i_m_pregnant">I’m pregnant</string>
    <string name="i_m_breastfeeding">I’m breastfeeding</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="people_of_different_ages_have">People of different ages have varying daily water intake needs.</string>
    <string name="daily_water_intake_varies_significantly_by_weight">Daily water intake varies significantly by weight.</string>
    <string name="daily_water_intake_varies_with_exercise_levels">Daily water intake varies with exercise levels.</string>
    <string name="the_hotter_the_climate_the_higher_your_daily_water_intake_should_be">The hotter the climate, the higher your daily water intake should be.</string>
    <string name="hydrating_right_after_waking_up_boosts_your_energy_in_the_morning">Hydrating right after waking up boosts your energy in the morning!</string>
    <string name="we_ll_remind_you_to_drink_an_hour_before_and_after_meals_for_optimal_digestion_and_weight_loss">We’ll remind you to drink an hour before and after meals for optimal digestion and weight loss</string>
    <string name="language">Language</string>
    <string name="defaults">Defaults</string>
    <string name="hours">hours</string>
    <string name="minutes">min</string>
    <string name="seconds">seconds</string>
    <string name="ml">ml</string>
    <string name="l">L</string>
    <string name="us_oz">US Oz</string>
    <string name="uk_oz">UK Oz</string>
    <string name="your_daily_goal_is">Your daily goal is</string>
    <string name="adjust">Adjust</string>
    <string name="excludes_35_of_water_from_food">Excludes 35% of water from food.</string>
    <string name="start">Start</string>
    <string name="avoid_these_water_drinking_mistakes">Avoid these water drinking mistakes</string>
    <string name="insights">INSIGHTS</string>
    <string name="water_drinking_title_1">Common Mistakes to Avoid When Drinking Water\n</string>
    <string name="water_drinking">Water Drinking</string>
    <string name="water_drinking_title_2">Best Times to Drink Water</string>
    <string name="water_drinking_title_3">Replacing Sugary Beverages with Water for Better Healt</string>
    <string name="water_drinking_title_4">Drink Water on an Empty Stomach?</string>
    <string name="water_drinking_title_5">Benefits of Drinking Lemon Water</string>
    <string name="water_drinking_title_6">Is It OK to Drink Water During a Meal?</string>
    <string name="water_drinking_title_7">Drink Water: The Benefits for Health</string>
    <string name="water_drinking_title_8">Dangers of Overhydration</string>
    <string name="water_drinking_title_9">Why You Shouldn\'t Give Babies Water</string>
    <string name="beauty_skincare_title_1">Drinking Schedule for Wrinkle-Free Skin</string>
    <string name="beauty_skincare_title_2">Juices for Radiant and Glowing Skin</string>
    <string name="beauty_skincare_title_3">Hot and Cold Water Benefits for Skin</string>
    <string name="beauty_skincare_title_4">Promote Hair Growth with Water</string>
    <string name="beauty_skincare"><![CDATA[Beauty & Skincare]]></string>
    <string name="self_care_title_1">Effective Fat-Burning Beverages for Weight Loss</string>
    <string name="self_care_title_2">What to Drink During Fasting</string>
    <string name="self_care_title_3">Top Fat-Burning Drinks for Weight Loss</string>
    <string name="self_care_title_4">What to Drink During Fasting</string>
    <string name="self_care_title_5">Drink Water to Lose Weight: How to Do It</string>
    <string name="self_care_title_6">Benefits of Hydration for Exercise</string>
    <string name="self_care">Self-care</string>
    <string name="health_life_style_title_1">Effective Fat-Burning Beverages for Weight Loss</string>
    <string name="health_life_style_title_2">What to Drink During Fasting</string>
    <string name="health_life_style_title_3">Drink Water to Lose Weight: How to Do It</string>
    <string name="health_life_style_title_4">Benefits of Hydration for Exercise</string>
    <string name="health_life_style_title_5">Soothe Sore Throats with These Drinks</string>
    <string name="health_life_style_title_6">Drinks to Relieve Stomach Bloating</string>
    <string name="health_life_style">Health Lifestyle</string>
    <string name="unit_ml">ml</string>
    <string name="recent">Recent</string>
    <string name="close">Close</string>
    <string name="you_should_drink_100_3000ml_at_once">* You should drink 100–3000ml at once.</string>
    <string name="average">Average</string>
    <string name="noti_title">Notification title</string>
    <string name="noti_content">Notification content</string>
    <string name="reminder_title">Reminder title</string>
    <string name="reminder_content">Reminder content</string>
    <string name="Wd_Item1_Opening_des">Did you know that how you drink water can influence your health?\n\nLet’s uncover the most frequent water-drinking mistakes and simple ways to stay properly hydrated and healthy.</string>
    <string name="Wd_Item1_Screen_1_title">The Consequences of Not Drinking Enough Water</string>
    <string name="Wd_Item1_Screen_1_des">Not drinking enough water can lead to health problems like headaches, low energy, and digestive issues such as constipation.\n\nSince hydration needs vary for each person, you can use our app to determine your ideal daily water intake and get timely reminders to maintain optimal hydration.</string>
    <string name="Wd_Item1_Screen_2_title">Drinking Too Much Water</string>
    <string name="Wd_Item1_Screen_2_des">Overhydration can cause hyponatremia, a condition where excess water dilutes the sodium levels in your body. This can be especially dangerous for athletes and individuals with heart or kidney conditions.\n\nSymptoms of hyponatremia include nausea, headaches, confusion, seizures, and, in severe cases, even coma.</string>
    <string name="Wd_Item1_Screen_3_title">Not Drinking Clean Water</string>
    <string name="Wd_Item1_Screen_3_des">Ensuring the water you drink is clean and free of harmful contaminants is essential for your health. If you\'re uncertain about the safety of your tap water, consider using a reliable water filter or opting for bottled water from trusted sources.</string>
    <string name="Wd_Item1_Screen_4_title">Drinking Water Too Quickly</string>
    <string name="Wd_Item1_Screen_4_des">Drinking water too quickly can cause bloating, discomfort, and nausea. It also reduces your body’s ability to absorb the water efficiently, often leading to frequent restroom trips.\n\nTo stay hydrated without these issues, sip water slowly and steadily throughout the day.</string>
    <string name="Wd_Item1_Screen_5_title">Drinking Cold Water</string>
    <string name="Wd_Item1_Screen_5_des">Cold water can cause blood vessels to constrict, potentially slowing digestion and reducing blood flow to your organs. For some individuals, drinking very cold water may also trigger headaches or migraines.\n\nTo avoid these effects, consider drinking water at room temperature or slightly chilled.</string>
    <string name="Wd_Item1_Screen_6_title">Skipping Water Before Bed</string>
    <string name="congratulations">Congratulations</string>
    <string name="congratulations_content_1">You’ve successfully achieved your drink goal today!</string>
    <string name="great">Great</string>
    <string name="reminder_mode">Reminder Mode</string>
    <string name="standard_title">Standard</string>
    <string name="standard_content">Based on your sleep and meals</string>
    <string name="interval_title">Interval</string>
    <string name="interval_content">Notify you at set intervals</string>
    <string name="custom_title">Custom</string>
    <string name="custom_content">Personalize all reminders</string>
</resources>