<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_aday_starts_at"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Day_StartAt0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_aday_starts_at2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/aday_start_at2"
        app:layout_constraintStart_toStartOf="@id/text_aday_starts_at"
        app:layout_constraintTop_toBottomOf="@id/text_aday_starts_at" />

    <NumberPicker
        android:id="@+id/number_picker_aday_start_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_aday_starts_at2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel_aday_start_at"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number_picker_aday_start_at"
        app:layout_constraintEnd_toStartOf="@id/btn_save_aday_start_at"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save_aday_start_at"
        android:layout_width="0dp"
        android:text="@string/save"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/btn_cancel_aday_start_at"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_cancel_aday_start_at"
        />
</androidx.constraintlayout.widget.ConstraintLayout>