<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/white"
    android:paddingHorizontal="16dp"
    android:paddingVertical="24dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/work_sans_700"
        android:text="@string/reminder_mode"
        android:textColor="@color/high_em"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/btnStandard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/btnStandard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:paddingVertical="12dp"
        android:paddingHorizontal="20dp"
        android:background="@drawable/bg_white2dp_20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btnInterval"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvStandardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/work_sans_700"
            android:text="@string/standard_title"
            android:textColor="@color/med_em"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvStandardContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/work_sans_500"
            android:text="@string/standard_content"
            android:textColor="@color/med_em"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnInterval"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:paddingVertical="12dp"
        android:paddingHorizontal="20dp"
        android:background="@drawable/bg_white2dp_20dp"
        app:layout_constraintBottom_toTopOf="@id/btnCustom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvIntervalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/work_sans_700"
            android:text="@string/interval_title"
            android:textColor="@color/med_em"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvIntervalContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/work_sans_500"
            android:text="@string/interval_content"
            android:textColor="@color/med_em"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnCustom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:paddingVertical="12dp"
        android:paddingHorizontal="20dp"
        android:background="@drawable/bg_white2dp_20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCustomTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/work_sans_700"
            android:text="@string/custom_title"
            android:textColor="@color/med_em"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCustomContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/work_sans_500"
            android:text="@string/custom_content"
            android:textColor="@color/med_em"
            android:textSize="16sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_white_24dp"
        android:fontFamily="@font/work_sans_700"
        android:gravity="center"
        android:paddingVertical="8dp"
        android:text="@string/cancel"
        android:textColor="@color/primary_600"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnSave"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/bg_blue_28dp"
        android:fontFamily="@font/work_sans_700"
        android:gravity="center"
        android:paddingVertical="8dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnCancel" />
</androidx.constraintlayout.widget.ConstraintLayout>