<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_me_firstday_ofweek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_dayOweek"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <NumberPicker
        android:id="@+id/number_picker_firstday_ofweek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_me_firstday_ofweek" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel_firstday_ofweek"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@id/btn_save_firstday_ofweek"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number_picker_firstday_ofweek" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save_firstday_ofweek"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_cancel_firstday_ofweek"
        app:layout_constraintTop_toTopOf="@id/btn_cancel_firstday_ofweek" />
</androidx.constraintlayout.widget.ConstraintLayout>