<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/text_units"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/units"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
/>
    <NumberPicker
        android:id="@+id/number_picker_unit1"
        android:layout_width="70dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/text_units"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/number_picker_unit2"
        />
    <NumberPicker
        android:id="@+id/number_picker_unit2"
        android:layout_width="70dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="@id/number_picker_unit1"
        app:layout_constraintStart_toEndOf="@id/number_picker_unit1"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel_unit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number_picker_unit1"
        app:layout_constraintEnd_toStartOf="@id/btn_save_unit"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save_unit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintTop_toTopOf="@id/btn_cancel_unit"
        app:layout_constraintStart_toEndOf="@id/btn_cancel_unit"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>