<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingHorizontal="16dp"
    android:paddingVertical="20dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivCongratulations"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/img_congratulations_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCongratulationsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/work_sans_700"
        android:gravity="center"
        android:text="@string/congratulations"
        android:layout_marginTop="20dp"
        android:textColor="@color/high_em"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/tvCongratulationsContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivCongratulations" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCongratulationsContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/work_sans_500"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/congratulations_content_1"
        android:textColor="@color/high_em"
        android:layout_marginTop="12dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/btnGreat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCongratulationsTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnGreat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_blue_24"
        android:backgroundTint="@color/primary_high_em"
        android:fontFamily="@font/work_sans_700"
        android:gravity="center"
        android:paddingVertical="12dp"
        android:text="@string/great"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/tvCongratulationsContent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>